[B]Version 0.2.5[/B] 
- Added an actors and directors view section
- Also fixed the pagination issue when displaying a list of movies

[B]Version 0.2.0[/B] 
- Added a yearly view section

[B]Version 0.1.5[/B] 
- Added A-Z sections

[B]Version 0.1.0[/B] 
- Added a Tamil section
- Added a search feature
- When a movie is playing, the thumbnail is now the movie cover

[B]Version 0.0.2[/B] 
- Fixed video not playing bug
- The info screen now shows the name of the movie

[B]Version 0.0.1[/B]
- Initial version of plugin