@@ -21,7 +21,7 @@
 </addon>
 <addon id="plugin.video.einthusan"
        name="Einthusan"
-       version="0.2.5"
+       version="0.2.6"
        provider-name="humla">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
