@@ -1,1 +1,1 @@
-5bc483da4121e0f71ab5736ce9cb12b2  humla_repo/addons.xml
+1ac9fb0ff12b854f8f0fd79561918f71  humla_repo/addons.xml
