@@ -1,0 +1,3 @@
+<strings>
+    <string id="30000">Highest Video Quality</string>
+</strings>
