@@ -1,0 +1,3 @@
+<settings>
+   <setting id="video_quality" type="enum" label="30000" values="SD|HQ|HD" default="HQ"/>
+</settings>
